src/GrammParser.java
// Generated from /home/jostautas/Documents/studijos/2s/OP/laborai/code_recognition_game/src/Gramm.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, WS=28, INT=29, STRING=30;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_for = 2, RULE_whileTrue = 3, RULE_whileLess = 4, 
		RULE_whileMore = 5, RULE_ifLess = 6, RULE_ifMore = 7, RULE_ifLessElse = 8, 
		RULE_ifMoreElse = 9, RULE_continue = 10, RULE_doWhileLess = 11, RULE_doWhileMore = 12, 
		RULE_stay = 13, RULE_goLeft = 14, RULE_goRight = 15, RULE_goLeftFast = 16, 
		RULE_goRightFast = 17, RULE_reverse = 18, RULE_goLeftX = 19, RULE_goRightX = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "for", "whileTrue", "whileLess", "whileMore", "ifLess", 
			"ifMore", "ifLessElse", "ifMoreElse", "continue", "doWhileLess", "doWhileMore", 
			"stay", "goLeft", "goRight", "goLeftFast", "goRightFast", "reverse", 
			"goLeftX", "goRightX"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'for(int i'", "'='", "'0;'", "'i'", "'<'", "';'", "'i++)'", "'{'", 
			"'x'", "'}'", "'while('", "'true'", "')'", "'>'", "'if('", "'else{'", 
			"'continue;'", "'do{'", "'}while('", "'stay'", "'goLeft'", "'goRight'", 
			"'goLeftFast'", "'goRightFast'", "'reverse'", "'goLeftX'", "'goRightX '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "WS", "INT", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrammParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				statement();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__10) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26))) != 0) );
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ForContext for_() {
			return getRuleContext(ForContext.class,0);
		}
		public WhileTrueContext whileTrue() {
			return getRuleContext(WhileTrueContext.class,0);
		}
		public WhileLessContext whileLess() {
			return getRuleContext(WhileLessContext.class,0);
		}
		public WhileMoreContext whileMore() {
			return getRuleContext(WhileMoreContext.class,0);
		}
		public IfLessContext ifLess() {
			return getRuleContext(IfLessContext.class,0);
		}
		public IfMoreContext ifMore() {
			return getRuleContext(IfMoreContext.class,0);
		}
		public IfLessElseContext ifLessElse() {
			return getRuleContext(IfLessElseContext.class,0);
		}
		public IfMoreElseContext ifMoreElse() {
			return getRuleContext(IfMoreElseContext.class,0);
		}
		public ContinueContext continue_() {
			return getRuleContext(ContinueContext.class,0);
		}
		public DoWhileLessContext doWhileLess() {
			return getRuleContext(DoWhileLessContext.class,0);
		}
		public DoWhileMoreContext doWhileMore() {
			return getRuleContext(DoWhileMoreContext.class,0);
		}
		public StayContext stay() {
			return getRuleContext(StayContext.class,0);
		}
		public GoLeftContext goLeft() {
			return getRuleContext(GoLeftContext.class,0);
		}
		public GoRightContext goRight() {
			return getRuleContext(GoRightContext.class,0);
		}
		public GoLeftFastContext goLeftFast() {
			return getRuleContext(GoLeftFastContext.class,0);
		}
		public GoRightFastContext goRightFast() {
			return getRuleContext(GoRightFastContext.class,0);
		}
		public ReverseContext reverse() {
			return getRuleContext(ReverseContext.class,0);
		}
		public GoLeftXContext goLeftX() {
			return getRuleContext(GoLeftXContext.class,0);
		}
		public GoRightXContext goRightX() {
			return getRuleContext(GoRightXContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				for_();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				whileTrue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				whileLess();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				whileMore();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				ifLess();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(54);
				ifMore();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(55);
				ifLessElse();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(56);
				ifMoreElse();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(57);
				continue_();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(58);
				doWhileLess();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(59);
				doWhileMore();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(60);
				stay();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(61);
				goLeft();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(62);
				goRight();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(63);
				goLeftFast();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(64);
				goRightFast();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(65);
				reverse();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(66);
				goLeftX();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(67);
				goRightX();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public ForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForContext for_() throws RecognitionException {
		ForContext _localctx = new ForContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__0);
			setState(71);
			match(T__1);
			setState(72);
			match(T__2);
			setState(73);
			match(T__3);
			setState(74);
			match(T__4);
			setState(75);
			match(INT);
			setState(76);
			match(T__5);
			setState(77);
			match(T__6);
			setState(78);
			match(T__7);
			setState(79);
			match(T__8);
			setState(80);
			match(T__1);
			setState(81);
			match(INT);
			setState(82);
			match(T__5);
			setState(83);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileTrueContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(GrammParser.INT, 0); }
		public WhileTrueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileTrue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterWhileTrue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitWhileTrue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitWhileTrue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileTrueContext whileTrue() throws RecognitionException {
		WhileTrueContext _localctx = new WhileTrueContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_whileTrue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__10);
			setState(86);
			match(T__11);
			setState(87);
			match(T__12);
			setState(88);
			match(T__7);
			setState(89);
			match(T__8);
			setState(90);
			match(T__1);
			setState(91);
			match(INT);
			setState(92);
			match(T__5);
			setState(93);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileLessContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public WhileLessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterWhileLess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitWhileLess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitWhileLess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileLessContext whileLess() throws RecognitionException {
		WhileLessContext _localctx = new WhileLessContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whileLess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__10);
			setState(96);
			match(T__8);
			setState(97);
			match(T__4);
			setState(98);
			match(INT);
			setState(99);
			match(T__12);
			setState(100);
			match(T__7);
			setState(101);
			match(T__8);
			setState(102);
			match(T__1);
			setState(103);
			match(INT);
			setState(104);
			match(T__5);
			setState(105);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileMoreContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public WhileMoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileMore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterWhileMore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitWhileMore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitWhileMore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileMoreContext whileMore() throws RecognitionException {
		WhileMoreContext _localctx = new WhileMoreContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whileMore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__10);
			setState(108);
			match(T__8);
			setState(109);
			match(T__13);
			setState(110);
			match(INT);
			setState(111);
			match(T__12);
			setState(112);
			match(T__7);
			setState(113);
			match(T__8);
			setState(114);
			match(T__1);
			setState(115);
			match(INT);
			setState(116);
			match(T__5);
			setState(117);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfLessContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public IfLessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifLess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterIfLess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitIfLess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitIfLess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfLessContext ifLess() throws RecognitionException {
		IfLessContext _localctx = new IfLessContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifLess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__14);
			setState(120);
			match(T__8);
			setState(121);
			match(T__4);
			setState(122);
			match(INT);
			setState(123);
			match(T__12);
			setState(124);
			match(T__7);
			setState(125);
			match(T__8);
			setState(126);
			match(T__1);
			setState(127);
			match(INT);
			setState(128);
			match(T__5);
			setState(129);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfMoreContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public IfMoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifMore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterIfMore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitIfMore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitIfMore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfMoreContext ifMore() throws RecognitionException {
		IfMoreContext _localctx = new IfMoreContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifMore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__14);
			setState(132);
			match(T__8);
			setState(133);
			match(T__13);
			setState(134);
			match(INT);
			setState(135);
			match(T__12);
			setState(136);
			match(T__7);
			setState(137);
			match(T__8);
			setState(138);
			match(T__1);
			setState(139);
			match(INT);
			setState(140);
			match(T__5);
			setState(141);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfLessElseContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public IfLessElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifLessElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterIfLessElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitIfLessElse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitIfLessElse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfLessElseContext ifLessElse() throws RecognitionException {
		IfLessElseContext _localctx = new IfLessElseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifLessElse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__14);
			setState(144);
			match(T__8);
			setState(145);
			match(T__4);
			setState(146);
			match(INT);
			setState(147);
			match(T__12);
			setState(148);
			match(T__7);
			setState(149);
			match(T__8);
			setState(150);
			match(T__1);
			setState(151);
			match(INT);
			setState(152);
			match(T__5);
			setState(153);
			match(T__9);
			setState(154);
			match(T__15);
			setState(155);
			match(T__8);
			setState(156);
			match(T__1);
			setState(157);
			match(INT);
			setState(158);
			match(T__5);
			setState(159);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfMoreElseContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public IfMoreElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifMoreElse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterIfMoreElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitIfMoreElse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitIfMoreElse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfMoreElseContext ifMoreElse() throws RecognitionException {
		IfMoreElseContext _localctx = new IfMoreElseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifMoreElse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__14);
			setState(162);
			match(T__8);
			setState(163);
			match(T__13);
			setState(164);
			match(INT);
			setState(165);
			match(T__12);
			setState(166);
			match(T__7);
			setState(167);
			match(T__8);
			setState(168);
			match(T__1);
			setState(169);
			match(INT);
			setState(170);
			match(T__5);
			setState(171);
			match(T__9);
			setState(172);
			match(T__15);
			setState(173);
			match(T__8);
			setState(174);
			match(T__1);
			setState(175);
			match(INT);
			setState(176);
			match(T__5);
			setState(177);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContinueContext extends ParserRuleContext {
		public ContinueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_continue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterContinue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitContinue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitContinue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContinueContext continue_() throws RecognitionException {
		ContinueContext _localctx = new ContinueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_continue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DoWhileLessContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public DoWhileLessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doWhileLess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterDoWhileLess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitDoWhileLess(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitDoWhileLess(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoWhileLessContext doWhileLess() throws RecognitionException {
		DoWhileLessContext _localctx = new DoWhileLessContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_doWhileLess);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__17);
			setState(182);
			match(T__8);
			setState(183);
			match(T__1);
			setState(184);
			match(INT);
			setState(185);
			match(T__5);
			setState(186);
			match(T__18);
			setState(187);
			match(T__8);
			setState(188);
			match(T__4);
			setState(189);
			match(INT);
			setState(190);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DoWhileMoreContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(GrammParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(GrammParser.INT, i);
		}
		public DoWhileMoreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doWhileMore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterDoWhileMore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitDoWhileMore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitDoWhileMore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoWhileMoreContext doWhileMore() throws RecognitionException {
		DoWhileMoreContext _localctx = new DoWhileMoreContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_doWhileMore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(T__17);
			setState(193);
			match(T__8);
			setState(194);
			match(T__1);
			setState(195);
			match(INT);
			setState(196);
			match(T__5);
			setState(197);
			match(T__18);
			setState(198);
			match(T__8);
			setState(199);
			match(T__13);
			setState(200);
			match(INT);
			setState(201);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StayContext extends ParserRuleContext {
		public StayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stay; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterStay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitStay(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitStay(this);
			else return visitor.visitChildren(this);
		}
	}
